fix for firefox unnecessary scrollbars

--- a/styles/utilities.scss
+++ b/styles/utilities.scss
@@ -54,7 +54,7 @@
   color: #7f3a07;
 }
 .overflow-container {
-  overflow: scroll;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
